# spaceship

./: .gitignore  LICENSE  README.md  demo.py  program.py  pyproject.toml  run.bat  space.py  test.py
.github/: publish-pypi.yml
.github/workflows/: publish-pypi.yml
spaceship/: game.py  render.py  sprite.py  utils.py
spaceship/input/: input.py
spaceship/render/: camera.py  entity.py  hud.py  render.py  sprite.py
spaceship/utils/: constants.py  math.py
spaceship_engine.egg-info/: PKG-INFO
src/spaceship/: game.py
src/spaceship/demo/: demo.py
src/spaceship/render/: camera.py  render.py  sprite.py
src/spaceship/save/: __init__.py  save.py
tests/: demo.py
