[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaceship-engine"
version = "0.2.0"
description = "A game engine for building games for CLIs"
readme = "README.md"
authors = [{ name = "falingunit", email = "sbaniruddh1@gmail.com" }]
license = 'MIT'
dependencies = ["pynput"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Falingunit/spaceship"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]